--- a/views/post.ejs
+++ b/views/post.ejs
@@ -41,6 +41,11 @@
           <p>Placeholder text by
             <a href="http://spaceipsum.com/">Space Ipsum</a>. Photographs by
             <a href="https://www.flickr.com/photos/nasacommons/">NASA on The Commons</a>.</p>
+            <a href="/posts/edit/<%=post.id%>" class="btn btn-primary p-2 mr-2 rounded"><span>Update Post</span></a>
+            <a href="/posts/delete/<%=post.id%>?_method=DELETE" class="btn btn-danger p-2 mr-2 rounded"
+            onclick="return confirm('Are You Sure?')"
+            ><span>Delete Post</span></a>
+
         </div>
       </div>
     </div>
